style.css
#calculadora{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;

    background-image: linear-gradient(rgb(209, 209, 209));
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border: 0.4px solid black;
    border-radius: 3px;
}

#display{
    font-size: 20px;
    background-color: white;
    border: 0.4px solid black;
    overflow-y: hidden;
    overflow-x: auto;
    white-space: nowrap;
    text-align: right;
    width: 242;
    height: 38;
    padding-top: 10px;
    padding-bottom: 19px;

    margin-bottom: 10px;
    h4{
        margin: 10px;
        margin-right: 10px;
        align-items:center;
    }
}

#display{
    display: block;
    background-color: white;
}

.botao{
    font-size: 20px;
    padding: 10px;
    height: 50px;
    width: 50px;
    cursor: pointer;
    transition: 0.2s;
    border: 0.4px solid black;
}

.botao:hover{
    padding: 15px;
    background-color: aliceblue;
}

#invisible{
    opacity: 0;
    visibility: hidden;
}

.flex{
    display: flex;
    gap: 30px;
}

#divtexto{
    text-align: center;
}

#grid1{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 6px;
    justify-content: center;

}

#grid2{
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 6px;
    justify-content: center;
}

#enterbutton{
    margin-top: 10px;
    button{
        width: 100%;
    }
}

#botaoreset{
    position: absolute;
    top: 83px;
    right: 7px;
    button{
        width: 20px;
        height: 20px;
    }
    img{
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 17px;
        height: 17px;
    }
}

